--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
   <color name="alert_text">#000000</color>
   <color name="splash_background">#09101C</color>
   <color name="splash_status_bar_color">#ffffff</color>
+  <color name="notification_icon_color">#4360DF</color>
 </resources>
